--- a/src/Shopshub.Web/Areas/Admin/Views/Home/Index.cshtml
+++ b/src/Shopshub.Web/Areas/Admin/Views/Home/Index.cshtml
@@ -25,8 +25,8 @@
                 miniAdmin = layui.miniAdmin;
 
             var options = {
-                iniUrl: "/api/initail",     // 初始化接口
-                clearUrl: "/api/clear",     // 缓存清理接口
+                iniUrl: "/api/data/initial",     // 初始化接口
+                clearUrl: "/api/data/clear",     // 缓存清理接口
                 urlHashLocation: true,      // 是否打开hash定位
                 bgColorDefault: false,      // 主题默认配置
                 multiModule: true,          // 是否开启多模块
