--- a/src/Shopshub.Web/Areas/Admin/Views/Home/Index.cshtml
+++ b/src/Shopshub.Web/Areas/Admin/Views/Home/Index.cshtml
@@ -39,7 +39,7 @@
 
             $('.login-out').on("click", function () {
                 layer.msg('退出登录成功', function () {
-                    window.location = '/admin/login';
+                    window.location = '/admin/user/logout';
                 });
             });
         });
